@@ -70,9 +70,9 @@ gimp_convolve_tool_register (GimpToolRegisterCallback  callback,
                 gimp_convolve_options_gui,
                 GIMP_PAINT_OPTIONS_CONTEXT_MASK,
                 "gimp-convolve-tool",
-                _("Blur/Sharpen"),
-                _("Blur/Sharpen Tool: Selective blurring or unblurring using a brush"),
-                N_("Con_volve"), "V",
+                _("Blur / Sharpen"),
+                _("Blur / Sharpen Tool: Selective blurring or unblurring using a brush"),
+                N_("Bl_ur / Sharpen"), "<shift>U",
                 NULL, GIMP_HELP_TOOL_CONVOLVE,
                 GIMP_STOCK_TOOL_BLUR,
                 data);
