@@ -70,9 +70,9 @@ gimp_dodge_burn_tool_register (GimpToolRegisterCallback  callback,
                 gimp_dodge_burn_options_gui,
                 GIMP_PAINT_OPTIONS_CONTEXT_MASK,
                 "gimp-dodge-burn-tool",
-                _("Dodge/Burn"),
-                _("Dodge/Burn Tool: Selectively lighten or darken using a brush"),
-                N_("Dod_ge-Burn"), "<shift>D",
+                _("Dodge / Burn"),
+                _("Dodge / Burn Tool: Selectively lighten or darken using a brush"),
+                N_("Dod_ge / Burn"), "<shift>D",
                 NULL, GIMP_HELP_TOOL_DODGE_BURN,
                 GIMP_STOCK_TOOL_DODGE,
                 data);
